# mcps

./: .env.example  .gitignore  ALPACA_SETUP.md  MCP_API_SPEC.md  Makefile  PROJECT_STRUCTURE.md  README.md  check_status.py  check_symbols.py  pyproject.toml  run_tests.py  ta_server.py  ta_server_full.py  test_mcp_requests.py  test_new_features.py  watchlist.txt
docs/: ALL_TESTS_PASSING.md  ARCHITECTURE.md  CLEANUP_COMPLETE.md  DARPA_IMPLEMENTATION_SUMMARY.md  DARPA_MONITORING_STATUS.md  DARPA_NEXT_STEPS_COMPLETE.md  DARPA_SAM_GOV_FIXED.md  MACRO_EVENTS_STATUS.md  MACRO_EVENTS_TRACKING.md  MAKEFILE_TEST_COMMANDS.md  MCP_SERVER_ARCHITECTURE.md  MCP_STATUS.md  NEWS_INTEGRATION.md  NEWS_STATUS.md  PROJECT_SUMMARY.md  README.md  TESTING.md  TEST_SUITE_STATUS.md  TRADING_SYSTEM_ROADMAP.md
scripts/: mcp_rest_api.py  test_all_mcp.sh
scripts/data_collection/: collect_darpa_historical.py
scripts/monitoring/: darpa_monitor_daemon.py
servers/trading/: README.md  darpa_events_monitor.py  macro_events_tracker.py  mcp_server_integrated.py  news_collector.py  ta_server_alpaca.py
servers/trading/legacy/: README.md  mcp_server.py
specs/: INDICATORS_SPEC.md
tests/: conftest.py
tests/darpa/: check_sam_structure.py  debug_sam_integration.py
